<resources>
    <string name="app_name">EstacionaUFBA</string>
    <string name="google_maps_key">AIzaSyCAhfZskQFEkA0EhaDnyJPbVVdfoVV-5nk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="todas_ocorrencias">Todas as ocorrências</string>
    <string name="nova_ocorrencia">Nova ocorrência</string>
    <string name="minhas_ocorrencias">Minhas ocorrências</string>
    <string name="minha_conta">Minha conta</string>

    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="placa_carro">Placa do Carro:</string>
    <string name="atualizar_senha">* Deixar campo vazio se desejar manter a senha atual</string>

    <string name="update">Atualizar</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="logout">Logout</string>

    <string name="campo_obrigatorio">Campo Obrigatório.</string>
    <string name="existe_usuario">Existe usuário cadastrado com o e-mail fornecido.</string>
    <string name="atualizacao_sucedida">Usuário atualizado com sucesso.</string>
    <string name="criacao_ocorrencia_sucedida">Ocorrência registrada com sucesso.</string>
    <string name="criacao_ocorrencia_malsucedida">A ocorrência não pôde ser registrada.</string>

    <string name="mapa">Mapa</string>
    <string name="ocorrencias">Ocorrências</string>
    <string name="publicado">Publicado em:</string>

    <!-- Locations and Maps -->
    <string name="no_geocoder_available">No Geocoder Available</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">No address found</string>
    <string name="invalid_lat_long_used">invalid_lat_long_used</string>
    <string name="service_not_available">service_not_available</string>

    <string name="titulo">Título:</string>
    <string name="descricao">Descrição:</string>
    <string name="local">Local:</string>
    <string name="modelo_carro">Modelo do Carro:</string>

    <!--Botões-->
    <string name="adicionar">Adicionar</string>
    <string name="adicionar_foto">Adicionar Foto</string>
    <string name="adicionar_ocorrencia">Adicionar Ocorrência</string>
    <string name="editar">Editar</string>
    <string name="delete">Deletar</string>

    <string name="alert_dialog_delete">Confirma a exclusão da ocorrência?</string>
    <string name="required_field">Campo obrigatório!</string>
    <string name="login_successful">Usuário logado com sucesso.</string>
    <string name="login_error">Erro no login.</string>
    <string name="register">Registrar</string>
    <string name="name">Nome:</string>
    <string name="user_register_successful">Registro efetuado com sucesso</string>
    <string name="user_register_error">Erro no registro do usuário.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
