<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:layout_marginLeft="@dimen/fragment_left_margin"
    android:layout_marginRight="@dimen/fragment_right_margin"
    tools:context=".fragment.MinhaContaFragment">

    <TextView
        android:text="@string/minha_conta"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView_titulo_fragment_minha_conta" />

    <TextView
        android:layout_marginTop="24dp"
        android:text="@string/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_titulo_fragment_minha_conta"
        android:id="@+id/textView_minha_conta_nome" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView_minha_conta_nome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editText_minha_conta_nome" />

    <TextView
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_minha_conta_nome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView_minha_conta_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/textView_minha_conta_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editText_minha_conta_email" />

    <TextView
        android:text="@string/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_minha_conta_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView_minha_conta_senha" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/textView_minha_conta_senha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editText_minha_conta_senha" />

    <TextView
        android:text="@string/atualizar_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:layout_below="@+id/editText_minha_conta_senha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView_minha_conta_atualizar_senha" />

    <TextView
        android:text="@string/placa_carro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/textView_minha_conta_atualizar_senha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView_minha_conta_placa_carro" />

    <Button
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_minha_conta_update"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:id="@+id/button_minha_conta_logout" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_minha_conta_placa_carro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editText_minha_conta_placa_carro"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:focusable="false"/>

    <Button
        android:text="@string/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:id="@+id/button_minha_conta_update"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/editText_minha_conta_placa_carro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>