<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_padding"
    android:orientation="vertical"
    android:background="@color/colorMainBackground">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_ocorrencia_titulo"
            android:text="@string/titulo"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorPrimaryNoDisable" />

        <EditText
            android:id="@+id/editText_ocorrencia_titulo"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/placa_carro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_ocorrencia_placa_carro"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorPrimaryNoDisable" />

        <EditText
            android:id="@+id/editText_ocorrencia_placa_carro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_ocorrencia_modelo_carro"
            android:text="@string/modelo_carro"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorPrimaryNoDisable" />

        <EditText
            android:id="@+id/editText_ocorrencia_modelo_carro"
            android:inputType="textPersonName"
            android:hint="@string/modelo_carro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></LinearLayout>

    <EditText
        android:id="@+id/editText_ocorrencia_descricao"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:hint="@string/descricao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<Item
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_icon"
            android:id="@+id/imageViewMapPin"
            android:layout_gravity="center" ></Item>-->

        <EditText
            android:id="@+id/editText_ocorrencia_local"
            android:hint="@string/local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
